<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.button.MaterialButton

        style="@style/Widget.Evaluacion3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_comida_nuevo"
        />
    <com.google.android.material.button.MaterialButton

        style="@style/Widget.Evaluacion3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_comida_desayuno"
        />
    <com.google.android.material.button.MaterialButton

        style="@style/Widget.Evaluacion3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_comida_almuerzo"
        />
    <com.google.android.material.button.MaterialButton

        style="@style/Widget.Evaluacion3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_comida_cena"
        />
    <com.google.android.material.button.MaterialButton

        style="@style/Widget.Evaluacion3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_comida_categoria"
        />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        />
    <com.google.android.material.button.MaterialButton

        style="@style/Widget.Evaluacion3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_comida_Cuenta"
        />
</merge>