<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"

        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:text="Bienvenido "
            android:textAppearance="@style/TextAppearance.Evaluacion3.Title1"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/login_usuario"
            app:endIconMode="clear_text"
            style="@style/Widget.Evaluacion3.TextInputLayout"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/login_contraseña"
            app:endIconMode="password_toggle"
            style="@style/Widget.Evaluacion3.TextInputLayout"
            app:errorEnabled="true"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/login_button"
            style="@style/Widget.Evaluacion3.Button1"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/login_button"
            android:layout_toLeftOf="@+id/login_button"
            android:text="@string/login_cancel_button"
            style="@style/Widget.Evaluacion3.Button2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="¿Has olvidado la Contraseña? Entra Aqui"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/gorjeo"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/google"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="100dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/facebook" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>